# HybridVulnerabilitiesAnalysis

./: CMakeLists.txt  Config.h.in  main.cpp
AnalysisCaller/: AnalysisCaller.cpp  AnalysisCaller.h  CMakeLists.txt
AnalysisCaller/Private/: Utils.cpp  Utils.h
ExternalDependencies/: SetupExternalDependencies.cmake
ExternalDependencies/CppCheck/: CMakeLists.txt
ExternalDependencies/CppCheck/ExternalCMakeProject/: CMakeLists.txt.in
ExternalDependencies/CweChecker/: CMakeLists.txt
ExternalDependencies/CweChecker/ExternalCMakeProject/: CMakeLists.txt.in
ExternalDependencies/Qt5/: CMakeLists.txt
ExternalDependencies/Valgrind/: CMakeLists.txt
ExternalDependencies/Valgrind/ExternalCMakeProject/: CMakeLists.txt.in
GUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
